tests/snapshots/parser_error_fixtures/MultiAnnotationErrors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/MultiAnnotationErrors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Type Annotation Colon

Missing `:` in function parameter type annotation. Write it as `name: Type`.

  examples/parser_errors/MultiAnnotationErrors.flx:2:23
  |
2 |     fn bad_param(name String) -> String { name }
  |                       ^^^^^^

Hint:
  Type annotations use `name: Type`.


error[E034]: Missing Return Type Arrow

Missing `->` before function return type. Write it as `fn name(...) -> Type { ... }`.

  examples/parser_errors/MultiAnnotationErrors.flx:3:27
  |
3 |     fn bad_return(x: Int) String { x }
  |                           ^^^^^^

Note:
  while parsing module `MultiAnnotationErrors` > function `bad_return`


error[E034]: Missing Type Annotation Colon

Missing `:` in let binding type annotation. Write it as `value: Type`.

  examples/parser_errors/MultiAnnotationErrors.flx:6:19
  |
6 |         let value Int = 1
  |                   ^^^

Hint:
  Type annotations use `name: Type`.


error[E034]: Missing Type Annotation Colon

Missing `:` in function parameter type annotation. Write it as `x: Type`.

  examples/parser_errors/MultiAnnotationErrors.flx:7:21
  |
7 |         let f = /(x Int, y String) -> x
  |                     ^^^

Hint:
  Type annotations use `name: Type`.


error[E034]: Missing Type Annotation Colon

Missing `:` in function parameter type annotation. Write it as `y: Type`.

  examples/parser_errors/MultiAnnotationErrors.flx:7:28
  |
7 |         let f = /(x Int, y String) -> x
  |                            ^^^^^^

Hint:
  Type annotations use `name: Type`.

Found 5 errors.
== stdout ==
<not executed>
